<resources>
    <string name="app_name">Project 5</string>
    <string name="StoreOrder">Store Order</string>
    <string name="current_order">Current Order</string>
    <string name="ru_pizza">RU PIZZA</string>
    <string name="OrderPizza">Order Pizza</string>
    <string name="ordering">Ordering Pizza</string>
    <string name="Store">Store Orders</string>
    <string name="store_order">Store Order</string>
    <string name="small_price">small_price</string>
    <string name="medium_price">medium_price</string>
    <string name="large_price">large_price</string>
    <string name="BuildYourOwnPizza">Build Your Own Pizza</string>
    <string name="AddPizzaOrder">Add Pizza Order</string>
    <string name="toppings">Toppings</string>
    <string name="pizzatoppinglist">Pizza Toppings</string>
    <string name="sauce">Sauce:</string>
    <string name="Tomato">Tomato</string>
    <string name="Alfredo">Alfredo</string>
    <string name="Size">Size:</string>
    <string name="extra_sauce">Extra Sauce\n+$1</string>
    <string name="extra_cheese">Extra Cheese\n+$1</string>
    <string name="pizzaImage">PizzaImage</string>
    <string name="customize">Customize your Pizza</string>
    <string name="added_toppings">Added Toppings</string>
    <string name="avail_toppings">Available Toppings</string>
    <string name="text_price">Price: $</string>
    <string name="Price">price</string>
    <string name="order_number">Order Number:</string>
    <string name="order_ID">Order ID</string>
    <string name="CheckCurrentOrder">CheckCurrentOrder</string>
    <string name="sauce_type">Sauce type</string>
    <string name="subtotal">Subtotal: $</string>
    <string name="tax">Tax: $</string>
    <string name="total">Total: $</string>
    <string name="subtotal_output">Subtotal Output</string>
    <string name="tax_output">Tax Output</string>
    <string name="total_output">Total Output</string>
    <string name="cancelAll">Cancel All</string>
    <string name="placeOrder">Place Order</string>
    <string name="remove_order">Remove Current Order</string>
    <string name="Back">Back</string>
    <string name="Quantity">Qty:</string>
    <string name="one">1</string>
    <string name="add">+</string>
    <string name="minus">-</string>
</resources>