<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/material_dynamic_primary90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp">

            <TextView
                android:id="@+id/quantityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/Quantity"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pizza_image" />

            <Button
                android:id="@+id/buttonDecrease"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/minus"
                app:layout_constraintBottom_toBottomOf="@+id/buttonIncrease"
                app:layout_constraintStart_toEndOf="@+id/buttonIncrease"
                app:layout_constraintTop_toTopOf="@+id/buttonIncrease" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:gravity="center"
                android:minWidth="40dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/one"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/quantityText"
                app:layout_constraintStart_toEndOf="@+id/quantityText"
                app:layout_constraintTop_toTopOf="@+id/quantityText" />

            <Button
                android:id="@+id/buttonIncrease"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:text="@string/add"
                app:layout_constraintBottom_toBottomOf="@+id/quantity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/quantity" />

            <Button
                android:id="@+id/AddOrderButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/AddPizzaOrder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/ExtraCheese"
                app:layout_constraintTop_toBottomOf="@+id/SizeGroup"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/pizzaType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/BuildYourOwnPizza"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/pizza_image"
                android:layout_width="159dp"
                android:layout_height="159dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/pizzaImage"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="@+id/pizzaType"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pizzaType"
                app:srcCompat="@drawable/byo" />

            <TextView
                android:id="@+id/toppings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="100dp"
                android:text="@string/toppings"
                android:textAlignment="center"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pizzaToppingList"
                android:layout_width="217dp"
                android:layout_height="68dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/pizzatoppinglist"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/pizza_image"
                app:layout_constraintTop_toBottomOf="@+id/toppings" />

            <TextView
                android:id="@+id/Size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="78dp"
                android:layout_marginTop="10dp"
                android:text="@string/Size"
                app:layout_constraintStart_toStartOf="@+id/pizzaToppingList"
                app:layout_constraintTop_toBottomOf="@+id/pizzaToppingList" />

            <RadioGroup
                android:id="@+id/SizeGroup"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/Size"
                app:layout_constraintTop_toBottomOf="@+id/Size">

                <RadioButton
                    android:id="@+id/small_price"
                    android:layout_width="match_parent"
                    android:layout_height="32sp"
                    android:text="@string/small_price"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/medium_price"
                    android:layout_width="match_parent"
                    android:layout_height="32sp"
                    android:text="@string/medium_price"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/large_price"
                    android:layout_width="match_parent"
                    android:layout_height="32sp"
                    android:text="@string/large_price"
                    tools:ignore="TouchTargetSizeCheck" />

            </RadioGroup>


            <CheckBox
                android:id="@+id/ExtraSauce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:checked="false"
                android:text="@string/extra_sauce"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quantityText"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/ExtraCheese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/extra_cheese"
                app:layout_constraintBottom_toBottomOf="@+id/ExtraSauce"
                app:layout_constraintStart_toEndOf="@+id/ExtraSauce"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioGroup
                android:id="@+id/sauceGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@+id/Sauce"
                app:layout_constraintTop_toBottomOf="@+id/Sauce"/>

            <TextView
                android:id="@+id/Sauce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/sauce"
                app:layout_constraintStart_toStartOf="@+id/pizzaToppingList"
                app:layout_constraintTop_toBottomOf="@+id/pizzaToppingList" />

            <TextView
                android:id="@+id/saucetype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sauce_type"
                app:layout_constraintEnd_toStartOf="@+id/SizeGroup"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/Sauce"
                app:layout_constraintTop_toBottomOf="@+id/Sauce" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>