<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pizzabg"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/RUPIZZA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="92dp"
                android:text="@string/ru_pizza"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/ordering"
                android:layout_width="260dp"
                android:layout_height="186dp"
                android:layout_marginTop="60dp"
                android:contentDescription="@string/ordering"
                android:onClick="onOrderingButton"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/supreme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RUPIZZA"    />

            <TextView
                android:id="@+id/OrderPizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OrderPizza"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toTopOf="@+id/ordering"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="212dp" />

            <ImageButton
                android:id="@+id/CurrentButton"
                android:layout_width="172dp"
                android:layout_height="172dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/CheckCurrentOrder"
                android:onClick="onCurrentButton"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/Store"
                app:layout_constraintTop_toTopOf="@+id/Store"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/current_order" />

            <TextView
                android:id="@+id/currentOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_order"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/CurrentButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.863"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/Store"
                android:layout_width="172dp"
                android:layout_height="172dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="88dp"
                android:contentDescription="@string/Store"
                android:onClick="onStoreButton"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ordering"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/store" />

            <TextView
                android:id="@+id/storeOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_order"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/Store"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.189"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>